garrido: centralizando infos no .env

--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
+# Configuração do Banco de Dados
 DB_HOST=edumysql.acesso.rj.senac.br
 DB_USER=20252_prjint5
 DB_PASSWORD=Senac@2025
 DB_NAME=20252_prjint5_alissonferreira
 DB_PORT=3306
+
+# Configuração do Servidor
+PORT=3003
+
+# Microserviços Externos
+RESERVA_API_URL=http://localhost:3001
